fix: clerk design & redirect problems

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,10 @@
 
 /* TYPOGRAPHY */
 .small-caps { font-variant: small-caps; }
+
+
+/* Clerk */
+.cl-userButtonOuterIdentifier,
+.cl-internal-1eekank {
+  color: hsl(var(--foreground));
+}
