--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,13 +60,13 @@
 }
 
 @layer utilities {
-  /* EXPANDABLE BUTTON */
-  button.expandable > div {
+  /* EXPANDABLE (BUTTON) */
+  .expandable > div {
     @apply hidden;
   }
 
-  button.expandable:hover > div,
-  button.expandable[data-state="open"] > div {
+  .expandable:hover > div,
+  .expandable[data-state="open"] > div {
     @apply flex items-center justify-center px-1 animate-in slide-in-from-right-1/2 duration-300;
   }
 
