style: add missing flex-none to img

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,7 +86,7 @@
 
   /* IMAGE WRAPPER */
   .img-wrapper {
-    @apply relative overflow-hidden;
+    @apply relative overflow-hidden flex-none;
   }
   .img-wrapper > img {
     @apply object-cover;
