feat: add widget header & subheader components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,9 @@
   .heading-decorator::before {
     @apply absolute w-2/3 h-[0.2rem] -top-[0.675rem] bg-accent rounded-full content-[''];
   }
+  .heading-decorator.subheading::before {
+    @apply absolute w-4/5 h-[0.085rem] -top-[0.35rem] bg-secondary rounded-full content-[''];
+  }
 
   /* IMAGE WRAPPER */
   .img-wrapper {
