refactor(config): merge `@layer base` directives

--- a/apps/next-app/src/app/globals.css
+++ b/apps/next-app/src/app/globals.css
@@ -141,6 +141,7 @@
       opacity: 1;
     }
   }
+
   @keyframes spin-slow {
     0% {
       transform: rotate(0deg);
@@ -162,14 +163,6 @@
   }
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
 @layer base {
   *,
   ::after,
@@ -177,6 +170,11 @@
   ::backdrop,
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
+  }
+
+  body {
+    background-color: var(--background);
+    color: var(--foreground);
   }
 }
 
@@ -241,16 +239,6 @@
   @apply relative overflow-hidden flex-none;
   & > img {
     @apply object-cover;
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-
-  body {
-    @apply bg-background text-foreground;
   }
 }
 
